~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in version 3

* Add CLI and conf options to explicitly specify %prog value
* Skip showing commands with help == SUPPRESS
* Avoid rendering docs for command aliases
* Print program name in upper case in header and footer
* Dropped --author-email CLI option
* The --author CLI option can be specified multiple times
* All CLI options can be specified also in setup.cfg
* Don't render AUTHORS and DISTRIBUTION if they would contain undefined values
* Remove '... was written by' from AUTHORS

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in version 2.2

* Fixed the testsuite against the setuptools v60+

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in version 2.1

* Output manual pages should be built reproducibly, no matter the current
  size of the terminal.

* Methods build_manpages, get_build_py_cmd, get_install_cmd are now
  provided in top-level module.

* More portable opening and parsing given by python file name.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in version 2

* Split out options by generic argument groups, not only predefined
  "positional arguments", "options", and Subparsers.

* RPM spec file updated to comply with the recent (Fedora 35+) guidelines.

* Drop python3-six requirment.

* Properly highligh all option argument METAVARs.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in version 1.5

* The "epilog" from argparse object is dumped to "COMMENTS" sections.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in version 1.4

* fixed testsuite for Python 3.9

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in version 1.3

* drop additional .br tag from paragraphs so the multiline text is nicer

* provide argparse-manpage via entry_point
